--- a/pom.xml
+++ b/pom.xml
@@ -84,15 +84,18 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>3.11-beta2</version>
+            <version>3.17</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>3.11-beta2</version>
+            <version>3.17</version>
         </dependency>
 
 
